--- a/frontend/src/css/Pantalla2Login.css
+++ b/frontend/src/css/Pantalla2Login.css
@@ -1,11 +1,11 @@
 .form-box {
-    max-width: 300px;
-    background: #f1f7fe;
-    overflow: hidden;
-    border-radius: 16px;
-    color: #010101;
-    margin: 0 auto; /* Alinea horizontalmente el form-box */
-    margin-top: 50px; /* Espacio superior */
+  max-width: 500px; /* Ajusta el ancho máximo del form-box */
+  background: #f1f7fe;
+  overflow: hidden;
+  border-radius: 16px;
+  color: #010101;
+  margin: 0 auto; /* Alinea horizontalmente el form-box */
+  margin-top: 50px; /* Espacio superior */
 }
 
   
@@ -42,12 +42,13 @@
     background: none;
     border: 0;
     outline: 0;
-    height: 40px;
+    height: 50px; /* Ajusta la altura de los campos de entrada */
     width: 100%;
     border-bottom: 1px solid #eee;
-    font-size: .9rem;
+    font-size: 1.5rem; /* Ajusta el tamaño de fuente de los campos de entrada */
     padding: 8px 15px;
-  }
+}
+
   
   .form-section {
     padding: 16px;
